# chat-assistant

./: .env.example  .gitignore  AUDIT.md  CURRENT_BRANCH_HANDOFF.md  FASTGPT_LOCAL_KB_MIGRATION_HANDOFF.md  LOCAL_PACKAGE_PRODUCT_HANDOFF.md  LOCAL_PACKAGE_PRODUCT_ONE_PAGE.md  MVP_CONVERGENCE_HANDOFF.md  MVP_CONVERGENCE_ONE_PAGE.md  README.md  STARTUP.md  config.py  course_manager.py  main.py  message_analyzer.py  rag_engine.py  requirements.txt  wechat_bot.py
backend/: .env.example  pyproject.toml  requirements-vector.txt  requirements.txt
backend/src/ai_ta_bot/: __main__.py  admin_app.py  config.py  config_store.py  settings_manager.py
backend/src/ai_ta_bot/application/: bootstrap.py  bot_runner.py  question_service.py
backend/src/ai_ta_bot/configuration/: __init__.py  loader.py  models.py
backend/src/ai_ta_bot/domain/: trigger_policy.py
backend/src/ai_ta_bot/integrations/: wechat_gateway.py
backend/src/ai_ta_bot/knowledge/: README.md  __init__.py  answer_generator.py  cloud_knowledge.py  factory.py  loader.py  (+6 more)
backend/tests/: test_admin_app.py  test_answer_generator.py  test_bot_runner.py  test_cloud_knowledge.py  test_cloud_knowledge_admin.py  test_config_store_public.py  test_conversation_repository.py  test_knowledge_document_repository.py  test_maxkb_knowledge.py  test_multi_group_e2e.py  test_process_lock.py  test_project_paths.py  test_question_router.py  test_question_service.py  test_retriever.py  test_runtime_router.py  test_task_metadata_repository.py  test_trigger_policy.py  test_web_search.py  test_wechat_gateway.py  test_wxauto4_dependency.py
(+76 files in other folders)
