[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_ta_bot"
version = "0.2.0"
description = "AI 社群助教机器人 — 微信云知识库问答"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "wxauto4 @ git+https://github.com/FreeWisdom/wxauto-4.0.git@bd7c5233e79c0a185638a325bf6d30607244dfa8",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "alibabacloud-bailian20231229>=2.13.1,<3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
